sap-s4hana-cloud/2.6/modules/ROOT/pages/sap-s4hana-cloud-connector-reference.adoc
= SAP S/4HANA OData Connector 2.6 Reference - Mule 4
:page-aliases: connectors::sap/sap-s4hana-cloud-connector-reference.adoc



For software requirements and compatibility information, see the SAP S/4HANA OData Connector Release Notes.


[[Config]]
== Default Configuration


[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_BasicAuthentication, Basic Authentication>>
* <<Config_Oauth2ClientCredentialsAuthentication, Oauth2 Client Credentials Authentication>>
 | The connection types to provide to this configuration. | | x
| Time Zone a| String |  The timezone with which to convert the Date objects returned from S/4HANA. |  UTC |
| Batch Buffer Size a| Number |  Defines the maximum memory the connector will use to keep batch requests in memory. If more than the specified maximum memory is consumed the connector starts to buffer the content on disk. | 512 |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB |  The unit in which batchBufferSize size is expressed. |  KB |
| Response timeout a| Number |  Response timeout for the request |  30 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request |  SECONDS |
| Encoding a| String |  |  |
| Name a| String |  The identifier of this element, which is also used in other components to reference the element. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

== Connection Types

[[Config_BasicAuthentication]]
=== Basic Authentication

Basic authentication is the simplest way of enforcing access controls because it does not require cookies, session identifiers, or login pages. Instead, it uses standard fields in the HTTP header, which removes the need for handshakes. This mechanism provides no confidentiality protection for the transmitted credentials. The credentials are encoded with Base64 in transit, but not encrypted or hashed in any other way.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Service base URL a| String |  The base URL of the SAP S/4HANA instance to access from the connector and from which all other endpoints are derived. |  | x
| Cache Entry TTL a| Number |  The time to live. The time a cache entry is kept in the cache before being evicted. A value of 0 disables the cache. |  0 |
| Cache Entry TTL Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Cache Entry TTL* field. |  MINUTES |
| EDM Expiration Interval a| Number |  The interval to check for expired EDM objects in the ObjectStore. |  30 |
| EDM Expiration Interval Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *EDM Expiration Interval* field. |  MINUTES |
| Username a| String |  The account username with which to log into SAP S/4HANA. |  | x
| Password a| String |  The account password with which to log into SAP S/4HANA. |  | x
| Discovery Service Enabled a| Boolean |  Feature switch for automatic service discovery. | `true` |
| Service discovery relative path a| String |  Relative path from the base URL to the endpoint used for automatic services discovery. |  `sap/opu/odata/IWFND/CATALOGSERVICE;v=0002/ServiceCollection` |s
| Scoped service discovery relative path a| String | Relative path from the base URL to the endpoint used for automatic services discovery with custom namespaces on cloud instances. |  `sap/opu/odata/IWFND/CATALOGSERVICE;v=0002/ScopedServiceCollection` | 
| Unlisted services directory a| String |  Common HTTP directory for unlisted services and services declared in *Service Attribute* (if the service URL is not specified). This parameter enables users to specify only service names in the unlisted services list instead of service URLs or enables users to not specify a service URL in *Services Attribute*. It also enables the connector to construct the service URL using the following format: `{base URL parameter}/{this parameter}/{item from unlisted services list or service name from *Service Attribute*}`. |   |
| Unlisted services a| Array of String |  List of services to add to the list of discovered services. Each item in this list must be a valid service URL, or it must be possible to construct a valid service URL with the following format: `{base url parameter}/{service directory parameter}/{item from this list}`. |  |
| Services attributes a| Array of <<ServiceAttribute>> |  List of services that are added to the list of discovered services. With *Service attributes*, you can add new services or override existing services. |  | 
| Default headers a| Array of <<DefaultHeader>> |  Default HTTP headers to include in the message. |  |
| Default query parameters a| Array of <<DefaultQueryParam>> |  Default query parameters to include in the request. |  |
| Proxy configuration a| <<ProxyConfiguration>> | Proxy configuration for the connector. |  |
| Connection timeout a| Number |  Connection timeout for the request |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Connection timeout unit for the request |  SECONDS |
| Client timeout a| Number |  Client timeout for the request |  30 |
| Client Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Client timeout unit for the request |  SECONDS |
| Retrieve Csrf Token a| Boolean |  Enables or disables automatic X-CSRF-Token retrieval before a resource-modifying request, such as a POST request. |  true |
| TLS configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. | `HTTP` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[Config_Oauth2ClientCredentialsAuthentication]]
=== OAuth 2.0 Client Credentials Authentication

include::connectors::partial$oauth2-description.adoc[]

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Service base URL a| String |  The base URL of the SAP S/4HANA instance to access from the connector and from which all other endpoints are derived. |  | x
| Cache Entry TTL a| Number |  The time to live. The time a cache entry is kept in the cache before being evicted. A value of 0 disables the cache. |  0 |
| Cache Entry TTL Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Cache Entry TTL* field. |  MINUTES |
| EDM Expiration Interval a| Number |  The interval to check for expired EDM objects in the ObjectStore. |  30 |
| EDM Expiration Interval Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *EDM Expiration Interval* field. |  MINUTES |
| Discovery Service Enabled a| Boolean |  Feature switch for automatic service discovery. |  `true` |
| Scoped service discovery relative path a| String | Relative path from the base URL to the endpoint used for automatic services discovery with custom namespaces on cloud instances. |  `sap/opu/odata/IWFND/CATALOGSERVICE;v=0002/ScopedServiceCollection` | 
| Unlisted services directory a| String |  Common HTTP directory for unlisted services and services declared in *Service Attribute* (if the service URL is not specified). This parameter enables users to specify only service names in the unlisted services list instead of service URLs or enables users to not specify a service URL in *Services Attribute*. It also enables the connector to construct the service URL using the following format: `{base URL parameter}/{this parameter}/{item from unlisted services list or service name from *Service Attribute*}`. |   |
| Unlisted services a| Array of String |  List of services to add to the list of discovered services. Each item in this list must be a valid service URL, or it must be possible to construct a valid service URL with the following format: `{base url parameter}/{service directory parameter}/{item from this list}`. |  |
| Services attributes a| Array of <<ServiceAttribute>> |  List of services that are added to the list of discovered services. With *Service attributes*, you can add new services or override existing services. |  | 
| Default headers a| Array of <<DefaultHeader>> |  Default HTTP headers to include in the message. |  |
| Default query parameters a| Array of <<DefaultQueryParam>> | Default query parameters to include in the request. |  |
| Proxy configuration a| <<ProxyConfiguration>> | Proxy configuration for the connector. |  |
| Connection timeout a| Number |  Connection timeout for the request |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Connection timeout unit for the request |  SECONDS |
| Client timeout a| Number |  Client timeout for the request |  30 |
| Client Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Client timeout unit for the request |  SECONDS |
| Retrieve Csrf Token a| Boolean |  Enables or disables automatic X-CSRF-Token retrieval before a resource-modifying request, such as a POST request. |  true |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. | `HTTP` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Client Id a| String | The OAuth client ID as registered with the service provider. |  | x
| Client Secret a| String |  The OAuth client secret as registered with the service provider. |  | x
| Token Url a| String |  The service provider's token endpoint URL. |  `https://{host-name}/{oauth-service}/{generate-token-resource}` |
| Scopes a| String |  The OAuth scopes requested during the dance. If not provided, it defaults to those in the annotation. |  |
| Object Store a| String |  A reference to the object store used to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

== Supported Operations
* <<BatchCreateEntity>>
* <<BatchDeleteEntity>>
* <<BatchExecuteFunction>>
* <<BatchGetEntity>>
* <<BatchQuery>>
* <<BatchUpdateEntity>>
* <<BatchUpsertCustomBusinessObject>>
* <<CreateChangeSet>>
* <<CreateEntity>>
* <<DeleteEntity>>
* <<ExecuteBatch>>
* <<ExecuteFunction>>
* <<GetEntity>>
* <<InitiateBatch>>
* <<Query>>
* <<Unauthorize>>
* <<UpdateEntity>>



[[BatchCreateEntity]]
== Batch Create Entity
`<s4hana:batch-create-entity>`

This operation adds a create entity request into the batch. This is a dynamic operation that returns what the OData specification states will be returned by the operation. The result of the operation will be an empty JSON if this request was not processed by the server successfully. The result will be available only after executing the *Execute batch* operation. Accessing the result before the *Execute batch* operation is executed results in an error.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Batch ID a| String |  Batch identifier |  | x
| Change set ID a| String |  Change set identifier |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Entity a| Object |  The entity in the SAP S/4HANA instance that is affected. This entity must be of the type defined in the *Entity type* parameter. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters to include in the request. The custom query parameters specified here overwrite the default query parameters specified in the configuration. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_CHANGE_SET_ID
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED


[[BatchDeleteEntity]]
== Batch Delete Entity
`<s4hana:batch-delete-entity>`

Adds a delete entity request into the batch.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Batch ID a| String |  Batch identifier |  | x
| Change set ID a| String |  Change set identifier. |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Entity key a| Object |  The object that identifies the entity sought, which may itself be an object. This is defined by the type of entity selected. |  #[payload] |
| Custom headers a| Object | Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters to include in the request. The custom query parameters specified here will overwrite the default query parameters specified in the configuration. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_CHANGE_SET_ID
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED


[[BatchExecuteFunction]]
== Batch Execute Function
`<s4hana:batch-execute-function>`

This operation adds an execute function request (invoke request) to the batch. The result of the operation will be an empty JSON if this request was not processed by the server successfully. The result will be available only after executing the *Execute batch* operation. Accessing the result before the *Execute batch* operation is executed will cause an error.

You are required to specify the change set identifier for the *Change set ID* parameter only if *Execute Batch Function* is executed using a POST HTTP method, otherwise do not specify the changet set identifier.

The connector throws an exception:

* If the change set identifier is not specified and the POST HTTP method is used
* When the change set identifier is specified and the *Execute Batch Function* uses GET HTTP method

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Batch ID a| String |  Batch identifier |  | x
| Change set ID a| String |  Change set identifier |  |
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Function Name a| String |  The name of the function to execute. |  | x
| Input parameters a| Object |  The parameters of the function wrapped into a single object. |  |
| Custom headers a| Object | Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object | Custom query parameters to include in the request. The custom query parameters specified here will overwrite the default query parameters specified in the configuration. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:BATCH_PROCESSING_ERROR
* S4HANA:CONNECTIVITY
* S4HANA:INVALID_FUNCTION_PARAMETER
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_CHANGE_SET_ID
* S4HANA:NO_SUCH_FUNCTION
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED


[[BatchGetEntity]]
== Batch Get Entity
`<s4hana:batch-get-entity>`

Adds a query operation request with a defined key into the batch. This is a dynamic operation, returning whatever the OData specification states will be returned by the operation. Result of the operation will be an empty JSON if this request was not processed by the server successfully. The result will be available only after the Execute batch operation is executed. Accessing the result before the Execute batch operation is executed will lead to an error.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Batch ID a| String |  Batch identifier |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Returned Fields a| String |  Comma-separated list of selection clauses. Each selection clause may be a Property name, Navigation Property name, or the "&#42;" character. The "&#42;" syntax causes all Properties on an Entry to be included without traversing associations. Use forward slash "/" to select fields of expanded navigation properties. If no field is selected, then all fields are returned. |   |
| Expanded properties a| String |  Comma-separated list of Navigation Properties. Additionally, each Navigation Property can be followed by a forward slash and another Navigation Property to enable identification of a multi-level relationship. Properties of the expanded navigation property will not be part of the payload unless selected. |   |
| Entity key a| Object |  The object that identifies the entity sought, which may itself be an object. This is defined by the type of entity selected. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters to include in the request. The custom query parameters specified here will overwrite the default query parameters specified in the configuration. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED


[[BatchQuery]]
== Batch Query Entity
`<s4hana:batch-query>`

Adds a query operation request into the batch, filtering the results by the parameters defined. If no filter is added, then all results will be listed. Result of the operation will be an empty JSON if this request was not processed by the server successfully. The result will be available only after the Execute batch operation is executed. Accessing the result before the Execute batch operation is executed will lead to an error.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Batch ID a| String |  Batch identifier |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Returned Fields a| String |  Comma-separated list of selection clauses. Each selection clause may be a Property name, Navigation Property name, or the "&#42;" character. The "&#42;" syntax causes all Properties on an Entry to be included without traversing associations. Use forward slash "/" to select fields of expanded navigation properties. If no field is selected, then all fields are returned. |   |
| Expanded properties a| String |  Comma-separated list of Navigation Properties. Additionally each Navigation Property can be followed by a forward slash and another Navigation Property to enable identification of a multi-level relationship. Properties of expanded navigation property will not be part of the payload unless selected. |   |
| Filter a| String |  The condition to filter the resulting list of entities. |   |
| Order by a| String |  Allows information to be requested in either ascending or descending order by using the `asc` or `desc` suffixes. If `asc` or `desc` are not specified, then the resources will be ordered in ascending order. | `asc` |
| Maximum returned elements a| Number | Limits the number of records to be retrieved by this query. |  |
| Skipped record amount a| Number | The number of records to skip before starting to return results. |  `0` |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:RETRY_EXHAUSTED


[[BatchUpdateEntity]]
== Batch Update Entity
`<s4hana:batch-update-entity>`

Adds an update entity request into the batch. This operation works through a PATCH request. This means that any fields that are missing will not be updated.

NOTE: Users cannot specify custom namespaces for custom business objects.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Batch ID a| String |  Batch identifier |  | x
| Change set ID a| String |  Change set identifier |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Entity a| Object |  The entity to be affected in the SAP S/4HANA instance. This entity must be of the type defined in the type parameter. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_CHANGE_SET_ID
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RESOURCE_NOT_FOUND
* S4HANA:RETRY_EXHAUSTED

[[BatchUpsertCustomBusinessObject]]
== Batch Upsert Custom Business Object
`<s4hana:batch-upsert-custom-business-object>`

This operation supports upsert for custom business objects.

NOTE: Users cannot specify custom namespaces for custom business objects.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Batch ID a| String |  Batch identifier. |  | x
| Change set ID a| String |  Change set identifier. |  | x
| Service a| String |  Type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  Name of the entity type to execute. |  | x
| Entity a| Object |  Custom business object entity of the entity type wrapped into a single object. |  `#[payload]` |
| Custom headers a| Object |  Custom headers that the request includes. The custom headers specified here overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request includes. The custom query parameters specified here overwrite the default query parameters specified in the configuration. |  |
| Response timeout a| Number | How long Mule waits for a response to complete before the request times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  `#[payload]` |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_CHANGE_SET_ID
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RESOURCE_NOT_FOUND
* S4HANA:RETRY_EXHAUSTED


[[CreateChangeSet]]
== Create Change Set
`<s4hana:create-change-set>`

Creates a new change set in the batch and returns its identifier.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Batch ID a| String |  Batch identifier |  | x
| Target Variable a| String | The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:RETRY_EXHAUSTED


[[CreateEntity]]
== Create Entity
`<s4hana:create-entity>`

Executes a create operation within the connected SAP S/4HANA instance. This is a dynamic operation, returning whatever the OData specification states will be returned by the operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Entity a| Object |  The entity to be affected in the SAP S/4HANA instance. This entity must be of the type defined in the type parameter. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_ENTITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_ENTITY_KEY
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED
* S4HANA:SERVER_ERROR
* S4HANA:TIMEOUT
* S4HANA:UNAUTHORIZED


[[DeleteEntity]]
== Delete Entity
`<s4hana:delete-entity>`

Executes a delete operation within the connected SAP S/4HANA instance.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Entity key a| Object |  The object that identifies the entity sought, which may itself be an object. This is defined by the type of entity selected. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_ENTITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_ENTITY_KEY
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED
* S4HANA:SERVER_ERROR
* S4HANA:TIMEOUT
* S4HANA:UNAUTHORIZED


[[ExecuteBatch]]
== Execute Batch
`<s4hana:execute-batch>`

Executes the batch and returns a summary containing results for all requests of the batch. After this operation is successfully executed, it will be possible to read a detailed result of each batch operation which was a part of this batch.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Service a| String |  The SAP S/4HANA's service. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Batch ID a| String |  Batch identifier |  | x
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |<<BulkOperationResult>>
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:BATCH_PROCESSING_ERROR
* S4HANA:CONNECTIVITY
* S4HANA:NO_SUCH_BATCH_ID
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED


[[ExecuteFunction]]
== Execute Function
`<s4hana:execute-function>`

Executes an OData-defined function in the SAP S/4HANA instance.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Function Name a| String |  The name of the function to execute. |  | x
| Input parameters a| Object |  The parameters of the function wrapped into a single object. |  |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_FUNCTION_PARAMETER
* S4HANA:NO_SUCH_FUNCTION
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED
* S4HANA:SERVER_ERROR
* S4HANA:TIMEOUT
* S4HANA:UNAUTHORIZED


[[GetEntity]]
== Get Entity by Key
`<s4hana:get-entity>`

Executes a retrieve operation on the SAP S/4HANA instance filtering the result by key. If no elements are found an error is thrown.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Returned Fields a| String |  Comma-separated list of selection clauses. Each selection clause may be a Property name, Navigation Property name, or the "&#42;" character. The "&#42;" syntax causes all Properties on an Entry to be included without traversing associations. Use forward slash "/" to select fields of expanded navigation properties. If no field is selected, then all fields are returned. |   |
| Expanded properties a| String |  Comma-separated list of Navigation Properties. Additionally each Navigation Property can be followed by a forward slash and another Navigation Property to enable identifying a multi-level relationship. Properties of expanded navigation property will not be part of the payload unless selected. |   |
| Entity key a| Object |  The object that identifies the entity sought, which may itself be an object. This is defined by the type of entity selected. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_ENTITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_ENTITY_FIELD
* S4HANA:NO_SUCH_ENTITY_KEY
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_NAVIGATION_PROPERTY
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED
* S4HANA:SERVER_ERROR
* S4HANA:TIMEOUT
* S4HANA:UNAUTHORIZED


[[InitiateBatch]]
== Initiate Batch
`<s4hana:initiate-batch>`

Prepares a new batch and returns its identifier.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:RETRY_EXHAUSTED


[[Query]]
== Query
`<s4hana:query>`

Executes a retrieve operation on the SAP S/4HANA instance filtering the results by the parameters defined. If no filter is added, then all results will be listed. This is a paginated operation.

NOTE: You must enable pagination support in your SAP S/4HANA instance to use this operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* <<non-repeatable-iterable>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Returned Fields a| String |  Comma-separated list of selection clauses. Each selection clause may be a Property name, Navigation Property name, or the "&#42;" character. The "&#42;" syntax causes all Properties on an Entry to be included without traversing associations. Use forward slash "/" to select fields of expanded navigation properties. If no field is selected, then all fields are returned. |   |
| Expanded properties a| String |  Comma-separated list of Navigation Properties. Additionally each Navigation Property can be followed by a forward slash and another Navigation Property to enable identifying a multi-level relationship. Properties of expanded navigation property will not be part of the payload unless selected. |   |
| Filter a| String |  The condition to filter the resulting list of entities. |   |
| Order by a| String |  Allows to request information in either ascending or descending order by using the ?asc? or ?desc? suffixes. If asc or desc not specified, then the resources will be ordered in ascending order. |   |
| Maximum returned elements a| Number |  Limits the amount of records to be retrieved by this query. |  |
| Skipped record amount a| Number |  The amount of records to skip before starting returning results. |  0 |
| Page size a| Number |  The size of the pages retrieved by the query. |  100 |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters that the request will include. The ones specified here will overwrite the default ones specified in the config. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:INVALID_ENTITY
* S4HANA:INVALID_FILTER
* S4HANA:INVALID_KEY
* S4HANA:INVALID_PAGE_SIZE
* S4HANA:INVALID_SKIP_SIZE
* S4HANA:INVALID_TOP_SIZE
* S4HANA:NO_SUCH_ENTITY_FIELD
* S4HANA:NO_SUCH_ENTITY_KEY
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_NAVIGATION_PROPERTY
* S4HANA:NO_SUCH_SERVICE
* S4HANA:NO_SUCH_SORTING_FIELD
* S4HANA:SERVER_ERROR
* S4HANA:TIMEOUT
* S4HANA:UNAUTHORIZED


[[Unauthorize]]
== Unauthorize
`<s4hana:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the authorization dance.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
|===


=== For Configurations

* <<Config>>


[[UpdateEntity]]
== Update Entity
`<s4hana:update-entity>`

Executes an update operation within the connected SAP S/4HANA instance. This operation will work through PATCH requests. This means that any fields that are missing will not be updated.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Service a| String |  The type of service. This is defined from the services available in the SAP S/4HANA instance. |  | x
| Entity type a| String |  The type of entity over which the operation is executed. This is defined from the types of entities available in the selected service. |  | x
| Entity a| Object |  The entity in the SAP S/4HANA instance that is affected. This entity must be of the type defined in the type parameter. |  #[payload] |
| Custom headers a| Object |  Custom headers to include in the request. The custom headers specified here will overwrite the default headers specified in the configuration. |  |
| Custom query parameters a| Object |  Custom query parameters to include in the request. The custom query parameters specified here overwrite the default query parameters that are specified in the configuration. |  |
| Response timeout a| Number |  Response timeout for the request. The timeout specified here overwrites the default timeout that is specified in the configuration. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Response timeout unit for the request. The timeout unit specified here overwrites the default timeout unit specified in the configuration. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA:CONNECTIVITY
* S4HANA:INVALID_ENTITY
* S4HANA:INVALID_KEY
* S4HANA:NO_SUCH_ENTITY_KEY
* S4HANA:NO_SUCH_ENTITY_TYPE
* S4HANA:NO_SUCH_SERVICE
* S4HANA:RETRY_EXHAUSTED
* S4HANA:SERVER_ERROR
* S4HANA:TIMEOUT
* S4HANA:UNAUTHORIZED


== Types

[[ServiceAttribute]]
=== Service Attribute

Specify additional details about services with namespaces as a separate configuration.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Service Name a| String | Service name, which is usually the title in the service catalog. If the URL contains a version suffix, the service name is the part of the URL after the last `/`. For example, if the URL is `{base URL parameter}/sap/opu/odata/sap/SERVICE_NAME;v=0002`, the service name is `SERVICE_NAME;v=0002`. |  | x
| Service Url a| String | URL to the service. |  | 
| Namespace a| String | Custom namespace for the service, if applicable. |  | 
|===

[[DefaultHeader]]
=== Default Header

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | The key |  | x
| Value a| String | The value |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | The key |  | x
| Value a| String | The value |  | x
|===

[[ProxyConfiguration]]
=== Proxy Configuration

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests is sent. |  | x
| Port a| Number | Port where the proxy requests is sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| Array of String | A list of hosts against which the proxy should not be used. |  |
| Ntlm Domain a| String | The domain to authenticate against the proxy. |  |
|===

[[Tls]]
=== TLS

Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Truststore

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the truststore. |  |
| Password a| String | The password used to protect the truststore. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the truststore. |  |
| Insecure a| Boolean | If `true`, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Keystore

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the keystore. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore), if present. |  |
|===

[[CrlFile]]
=== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

When streaming in this mode, Mule does not use the disk to buffer the contents. If you exceed the buffer size, the message fails.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This specifies how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering, and there are different buffering strategies. Mule keeps a portion of contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[non-repeatable-stream]
=== Non-repeatable Stream

You can disable the repeatable stream functionality and use non-repeatable streams, which can have less performance overhead, memory use, and cost.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  `JOIN_IF_POSSIBLE` |
|===

[[ResponseAttributes]]
=== Response Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Headers a| Object |  |  |
| Status Code a| Number |  |  |
|===

[[BulkOperationResult]]
=== Bulk Operation Result

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Id a| Any |  |  |
| Items a| Array of <<BulkItem>> |  |  |
| Successful a| Boolean |  |  |
|===

[[BulkItem]]
=== Bulk Item

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Exception a| Any |  |  |
| Id a| Any |  |  |
| Message a| String |  |  |
| Payload a| Any |  |  |
| Status Code a| String |  |  |
| Successful a| Boolean |  |  |
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially be allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize.|  100 instances|
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full.|  100 instances|
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances that will be kept in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
